devcom103: updated cors